--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "require": {
     "php": ">=7.0",
-    "guzzlehttp/guzzle": "6.*"
+    "guzzlehttp/guzzle": "^6.2"
   },
   "autoload": {
     "psr-4": {
